Cloud-only Colab + Drive storage

--- a/notebooks/01_train.ipynb
+++ b/notebooks/01_train.ipynb
@@ -21,6 +21,107 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a748766e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Minimal deps for run management & logging\n",
+    "!pip -q install pyyaml pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36891346",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, pathlib, yaml, time, shutil, pandas as pd\n",
+    "\n",
+    "# --- Base paths (Colab) ---\n",
+    "PROJECT = \"/content/ml-colab-agentic\"\n",
+    "DATA_DIR = f\"{PROJECT}/data\"\n",
+    "RUNS_DIR = f\"{PROJECT}/runs\"\n",
+    "\n",
+    "# Optional Drive mount toggle\n",
+    "SAVE_TO_DRIVE = True\n",
+    "DRIVE_DIR = \"/content/drive/MyDrive/ml-colab-agentic\"  # change if needed\n",
+    "\n",
+    "# --- Create a run folder ---\n",
+    "def new_run_id(dataset, model, note=\"\"):\n",
+    "    ts = time.strftime(\"%Y-%m-%d_%H-%M\")\n",
+    "    return \"_\".join(x for x in [ts, dataset, model, note] if x)\n",
+    "\n",
+    "RUN_ID  = new_run_id(\"cifar10\", \"simplenet\", \"amp\")\n",
+    "RUN_DIR = f\"{RUNS_DIR}/{RUN_ID}\"\n",
+    "for sub in [\n",
+    "    \"checkpoints\",\n",
+    "    \"plots/train\",\"plots/val\",\"plots/test\",\"plots/calib\",\n",
+    "    \"artifacts/train\",\"artifacts/val\",\"artifacts/test\",\"artifacts/calib\",\n",
+    "    \"cache\"\n",
+    "]:\n",
+    "    pathlib.Path(f\"{RUN_DIR}/{sub}\").mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# --- Write cfg.yaml (freeze your config; edit as needed before training) ---\n",
+    "CFG = {\n",
+    "    \"seed\": 42,\n",
+    "    \"epochs\": 5,\n",
+    "    \"batch_size\": 128,\n",
+    "    \"lr\": 1e-3,\n",
+    "    \"dataset\": \"CIFAR10\",\n",
+    "    \"data_root\": f\"{DATA_DIR}/raw\",   # downloads land here\n",
+    "    \"num_workers\": 2,\n",
+    "    \"amp\": True,\n",
+    "}\n",
+    "with open(f\"{RUN_DIR}/cfg.yaml\", \"w\") as f:\n",
+    "    yaml.safe_dump(CFG, f)\n",
+    "\n",
+    "# --- Convenience symlinks to \"latest\" (optional) ---\n",
+    "def safe_symlink(src, dst):\n",
+    "    try:\n",
+    "        if os.path.islink(dst) or os.path.exists(dst):\n",
+    "            os.remove(dst)\n",
+    "        os.symlink(src, dst)\n",
+    "    except Exception:\n",
+    "        # on Drive/Windows symlink may fail → just copy\n",
+    "        if os.path.isdir(src):\n",
+    "            if os.path.exists(dst): shutil.rmtree(dst)\n",
+    "            shutil.copytree(src, dst)\n",
+    "        else:\n",
+    "            shutil.copy2(src, dst)\n",
+    "\n",
+    "safe_symlink(RUN_DIR, f\"{PROJECT}/outputs\")                 # latest outputs → runs/<id>\n",
+    "safe_symlink(f\"{RUN_DIR}/checkpoints\", f\"{PROJECT}/checkpoints\")\n",
+    "print(\"RUN_DIR:\", RUN_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4bcb832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Long-form metrics CSV: split, epoch, metric, value\n",
+    "METRICS_CSV = f\"{RUN_DIR}/metrics.csv\"\n",
+    "\n",
+    "def log_metrics(rows):\n",
+    "    \"\"\"\n",
+    "    rows: list of dicts with keys: split, epoch, metric, value\n",
+    "    example:\n",
+    "      log_metrics([\n",
+    "        {\"split\":\"train\",\"epoch\":1,\"metric\":\"loss\",\"value\":1.234},\n",
+    "        {\"split\":\"val\",\"epoch\":1,\"metric\":\"acc\",\"value\":0.78},\n",
+    "      ])\n",
+    "    \"\"\"\n",
+    "    import pandas as _pd, os as _os\n",
+    "    df = _pd.DataFrame(rows, columns=[\"split\",\"epoch\",\"metric\",\"value\"])\n",
+    "    df.to_csv(METRICS_CSV, mode=\"a\", header=not _os.path.exists(METRICS_CSV), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "275deabe",
    "metadata": {},
    "outputs": [],
@@ -185,16 +286,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize model, optimizer, and paths\n",
+    "# Initialize model and optimizer\n",
     "model = SimpleNet(num_classes=10).to(device)\n",
     "opt = optim.Adam(model.parameters(), lr=CFG[\"lr\"])\n",
     "\n",
-    "metrics_path = f\"{REPO_PATH}/outputs/metrics.csv\"\n",
-    "checkpoint_path = f\"{REPO_PATH}/checkpoints/last.pt\"\n",
-    "\n",
     "print(f\"Model initialized on {device}\")\n",
-    "print(f\"Metrics will be saved to: {metrics_path}\")\n",
-    "print(f\"Checkpoint will be saved to: {checkpoint_path}\")"
+    "print(f\"Results will be saved to: {RUN_DIR}\")"
    ]
   },
   {
@@ -207,9 +304,9 @@
     "# Training loop\n",
     "from tqdm import tqdm\n",
     "\n",
-    "all_metrics = []\n",
-    "\n",
     "print(f\"\\nTraining for {CFG['epochs']} epochs...\\n\")\n",
+    "best_val_acc = 0.0\n",
+    "\n",
     "for epoch in range(CFG[\"epochs\"]):\n",
     "    # Train\n",
     "    train_loss, train_acc = train_one_epoch(model, train_dl, opt, device)\n",
@@ -218,11 +315,22 @@
     "    val_loss, val_acc = evaluate(model, test_dl, device)\n",
     "    \n",
     "    # Save checkpoint\n",
-    "    save_checkpoint(model, checkpoint_path)\n",
+    "    epoch_ckpt = f\"{RUN_DIR}/checkpoints/epoch_{epoch+1:03d}.pt\"\n",
+    "    save_checkpoint(model, epoch_ckpt)\n",
     "    \n",
-    "    # Append metrics\n",
-    "    all_metrics.append((epoch + 1, train_loss, train_acc, val_loss, val_acc))\n",
-    "    append_metrics_csv(metrics_path, [(epoch + 1, train_loss, train_acc, val_loss, val_acc)])\n",
+    "    # Update best checkpoint if improved\n",
+    "    if val_acc > best_val_acc:\n",
+    "        best_val_acc = val_acc\n",
+    "        import shutil\n",
+    "        shutil.copy2(epoch_ckpt, f\"{RUN_DIR}/checkpoints/best.pt\")\n",
+    "    \n",
+    "    # Log metrics (long-form)\n",
+    "    log_metrics([\n",
+    "        {\"split\": \"train\", \"epoch\": epoch+1, \"metric\": \"loss\", \"value\": train_loss},\n",
+    "        {\"split\": \"train\", \"epoch\": epoch+1, \"metric\": \"acc\", \"value\": train_acc},\n",
+    "        {\"split\": \"val\", \"epoch\": epoch+1, \"metric\": \"loss\", \"value\": val_loss},\n",
+    "        {\"split\": \"val\", \"epoch\": epoch+1, \"metric\": \"acc\", \"value\": val_acc},\n",
+    "    ])\n",
     "    \n",
     "    print(\n",
     "        f\"Epoch {epoch+1}/{CFG['epochs']} | \"\n",
@@ -230,7 +338,8 @@
     "        f\"Val Loss: {val_loss:.4f}, Val Acc: {val_acc:.4f}\"\n",
     "    )\n",
     "\n",
-    "print(f\"\\n✅ Training complete!\")"
+    "print(f\"\\n✅ Training complete! Best val acc: {best_val_acc:.4f}\")\n",
+    "print(f\"Results saved to: {RUN_DIR}\")"
    ]
   },
   {
@@ -248,28 +357,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show saved files\n",
+    "# Show run directory contents\n",
     "import os\n",
     "\n",
-    "print(\"Outputs:\")\n",
-    "outputs_dir = f\"{REPO_PATH}/outputs\"\n",
-    "if os.path.exists(outputs_dir):\n",
-    "    for f in os.listdir(outputs_dir):\n",
-    "        fpath = os.path.join(outputs_dir, f)\n",
-    "        size = os.path.getsize(fpath) / (1024 * 1024)  # MB\n",
-    "        print(f\"  {f} ({size:.2f} MB)\")\n",
-    "else:\n",
-    "    print(\"  (none)\")\n",
+    "print(f\"Run directory: {RUN_DIR}\\n\")\n",
     "\n",
-    "print(\"\\nCheckpoints:\")\n",
-    "checkpoints_dir = f\"{REPO_PATH}/checkpoints\"\n",
-    "if os.path.exists(checkpoints_dir):\n",
-    "    for f in os.listdir(checkpoints_dir):\n",
-    "        fpath = os.path.join(checkpoints_dir, f)\n",
-    "        size = os.path.getsize(fpath) / (1024 * 1024)  # MB\n",
-    "        print(f\"  {f} ({size:.2f} MB)\")\n",
-    "else:\n",
-    "    print(\"  (none)\")"
+    "# List all files in the run directory\n",
+    "for root, dirs, files in os.walk(RUN_DIR):\n",
+    "    level = root.replace(RUN_DIR, '').count(os.sep)\n",
+    "    indent = ' ' * 2 * level\n",
+    "    print(f'{indent}{os.path.basename(root)}/')\n",
+    "    subindent = ' ' * 2 * (level + 1)\n",
+    "    for file in files:\n",
+    "        fpath = os.path.join(root, file)\n",
+    "        size = os.path.getsize(fpath) / (1024)  # KB\n",
+    "        print(f'{subindent}{file} ({size:.1f} KB)')"
    ]
   },
   {
@@ -279,27 +381,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copy artifacts to Google Drive (if enabled)\n",
-    "if CFG[\"save_to_drive\"]:\n",
-    "    import shutil\n",
-    "    from pathlib import Path\n",
+    "# Copy entire run to Google Drive (if enabled)\n",
+    "if SAVE_TO_DRIVE:\n",
+    "    import subprocess, shlex\n",
     "    \n",
-    "    drive_dir = Path(CFG[\"drive_dir\"])\n",
-    "    drive_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    dst = f\"{DRIVE_DIR}/runs/{RUN_ID}\"\n",
+    "    os.makedirs(os.path.dirname(dst), exist_ok=True)\n",
     "    \n",
-    "    # Copy metrics\n",
-    "    if os.path.exists(metrics_path):\n",
-    "        shutil.copy(metrics_path, drive_dir / \"metrics.csv\")\n",
-    "        print(f\"✅ Copied metrics to {drive_dir / 'metrics.csv'}\")\n",
+    "    # Use cp -r to copy entire run directory\n",
+    "    result = subprocess.run(\n",
+    "        shlex.split(f'cp -r \"{RUN_DIR}\" \"{dst}\"'),\n",
+    "        capture_output=True,\n",
+    "        text=True,\n",
+    "        check=False\n",
+    "    )\n",
     "    \n",
-    "    # Copy checkpoint\n",
-    "    if os.path.exists(checkpoint_path):\n",
-    "        shutil.copy(checkpoint_path, drive_dir / \"last.pt\")\n",
-    "        print(f\"✅ Copied checkpoint to {drive_dir / 'last.pt'}\")\n",
-    "    \n",
-    "    print(f\"\\n📁 All artifacts saved to Drive: {CFG['drive_dir']}\")\n",
+    "    if result.returncode == 0:\n",
+    "        print(f\"✅ Copied run to Drive: {dst}\")\n",
+    "    else:\n",
+    "        print(f\"⚠️  Copy to Drive failed: {result.stderr}\")\n",
     "else:\n",
-    "    print(f\"📁 Artifacts saved locally in repo: {REPO_PATH}\")"
+    "    print(f\"📁 Run saved locally: {RUN_DIR}\")\n",
+    "    print(f\"   (Set SAVE_TO_DRIVE=True to copy to Google Drive)\")"
    ]
   },
   {
@@ -309,137 +412,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optional: Display metrics table\n",
+    "# Display metrics table\n",
     "import pandas as pd\n",
     "\n",
-    "if os.path.exists(metrics_path):\n",
-    "    df = pd.read_csv(metrics_path)\n",
-    "    print(\"Training Metrics:\")\n",
+    "if os.path.exists(METRICS_CSV):\n",
+    "    df = pd.read_csv(METRICS_CSV)\n",
+    "    print(\"Training Metrics (long-form):\")\n",
     "    print(df.to_string(index=False))\n",
+    "    \n",
+    "    # Pivot for easier viewing\n",
+    "    print(\"\\n\\nPivoted view:\")\n",
+    "    pivot = df.pivot_table(index=['split', 'epoch'], columns='metric', values='value')\n",
+    "    print(pivot)\n",
     "else:\n",
     "    print(\"No metrics file found.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "260cbb7e",
-   "metadata": {},
-   "source": [
-    "# ML Training Notebook\n",
-    "\n",
-    "This notebook is designed to run on **Google Colab** with a **GPU runtime** (T4, A100, etc.).\n",
-    "\n",
-    "## Quick setup\n",
-    "1. Go to **Runtime → Change runtime type → GPU**\n",
-    "2. Run the cells below in order\n",
-    "3. Monitor GPU usage with `!nvidia-smi`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e30f0bf5",
-   "metadata": {},
-   "source": [
-    "## Cell 1: Check GPU"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b2c8055",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!nvidia-smi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a526bc8",
-   "metadata": {},
-   "source": [
-    "## Cell 2: Install dependencies from repo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "854d8e71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip -q install -r https://raw.githubusercontent.com/armanfeili/ml-colab-agentic/main/requirements.txt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee6fdee4",
-   "metadata": {},
-   "source": [
-    "## Cell 3: Quick sanity check with PyTorch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f8accae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "\n",
-    "from src.utils import set_seed, to_device\n",
-    "\n",
-    "set_seed(0)\n",
-    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "print(f\"Device: {device}\")\n",
-    "\n",
-    "x = torch.randn(3, 3)\n",
-    "y = to_device(x)\n",
-    "print(f\"Tensor device: {y.device}\")\n",
-    "\n",
-    "# Tiny training loop (toy example)\n",
-    "w = torch.randn(3, 3, requires_grad=True, device=device)\n",
-    "opt = torch.optim.SGD([w], lr=0.1)\n",
-    "\n",
-    "for epoch in range(5):\n",
-    "    loss = (w @ w.T).mean()\n",
-    "    opt.zero_grad()\n",
-    "    loss.backward()\n",
-    "    opt.step()\n",
-    "    print(f\"Epoch {epoch}: loss={float(loss):.4f}\")\n",
-    "\n",
-    "print(\"\\n✅ Toy training loop completed!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc8a9856",
-   "metadata": {},
-   "source": [
-    "## Cell 4: Create outputs folder and write metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fea531b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pathlib\n",
-    "\n",
-    "pathlib.Path(\"outputs\").mkdir(exist_ok=True)\n",
-    "\n",
-    "with open(\"outputs/metrics.csv\", \"w\") as f:\n",
-    "    f.write(\"epoch,loss\\n\")\n",
-    "    for i in range(5):\n",
-    "        f.write(f\"{i},0.{i}\\n\")\n",
-    "\n",
-    "print(\"✅ Wrote outputs/metrics.csv\")\n",
-    "\n",
-    "# List outputs\n",
-    "!ls -la outputs/"
    ]
   }
  ],
