--- a/notebooks/01_train.ipynb
+++ b/notebooks/01_train.ipynb
@@ -21,102 +21,116 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a748766e",
+   "id": "0cad4738",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Minimal deps for run management & logging\n",
-    "!pip -q install pyyaml pandas"
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive', force_remount=True)\n",
+    "print(\"✅ Google Drive mounted at /content/drive\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36891346",
+   "id": "cc211562",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, pathlib, yaml, time, shutil, pandas as pd\n",
+    "import os, pathlib, time, yaml, shutil, pandas as pd\n",
     "\n",
-    "# --- Base paths (Colab) ---\n",
-    "PROJECT = \"/content/ml-colab-agentic\"\n",
-    "DATA_DIR = f\"{PROJECT}/data\"\n",
-    "RUNS_DIR = f\"{PROJECT}/runs\"\n",
+    "# ---- Project anchors ----\n",
+    "GDRIVE_ROOT = \"/content/drive/MyDrive\"\n",
+    "PROJECT_NAME = \"ml-colab-agentic\"        # change if you fork/rename\n",
+    "PROJECT_DRIVE = f\"{GDRIVE_ROOT}/{PROJECT_NAME}\"\n",
     "\n",
-    "# Optional Drive mount toggle\n",
-    "SAVE_TO_DRIVE = True\n",
-    "DRIVE_DIR = \"/content/drive/MyDrive/ml-colab-agentic\"  # change if needed\n",
+    "# Code lives in Colab VM from GitHub clone; data/runs live in Drive:\n",
+    "DATA_DIR = f\"{PROJECT_DRIVE}/data\"       # data/raw, data/processed\n",
+    "RUNS_DIR = f\"{PROJECT_DRIVE}/runs\"       # one folder per training run\n",
+    "LATEST_DIR = f\"{PROJECT_DRIVE}/latest\"   # optional: points to latest run\n",
     "\n",
-    "# --- Create a run folder ---\n",
+    "# Ensure minimal skeleton on Drive\n",
+    "for p in [\n",
+    "    f\"{DATA_DIR}/raw\", f\"{DATA_DIR}/processed\",\n",
+    "    RUNS_DIR, f\"{LATEST_DIR}\"\n",
+    "]:\n",
+    "    pathlib.Path(p).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(\"📁 DATA_DIR:\", DATA_DIR)\n",
+    "print(\"📁 RUNS_DIR:\", RUNS_DIR)\n",
+    "print(\"📁 LATEST_DIR:\", LATEST_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7339ea7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def new_run_id(dataset, model, note=\"\"):\n",
     "    ts = time.strftime(\"%Y-%m-%d_%H-%M\")\n",
     "    return \"_\".join(x for x in [ts, dataset, model, note] if x)\n",
     "\n",
     "RUN_ID  = new_run_id(\"cifar10\", \"simplenet\", \"amp\")\n",
     "RUN_DIR = f\"{RUNS_DIR}/{RUN_ID}\"\n",
-    "for sub in [\n",
+    "\n",
+    "# Create per-run subfolders on Drive\n",
+    "subs = [\n",
     "    \"checkpoints\",\n",
     "    \"plots/train\",\"plots/val\",\"plots/test\",\"plots/calib\",\n",
     "    \"artifacts/train\",\"artifacts/val\",\"artifacts/test\",\"artifacts/calib\",\n",
     "    \"cache\"\n",
-    "]:\n",
-    "    pathlib.Path(f\"{RUN_DIR}/{sub}\").mkdir(parents=True, exist_ok=True)\n",
+    "]\n",
+    "for s in subs:\n",
+    "    pathlib.Path(f\"{RUN_DIR}/{s}\").mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "# --- Write cfg.yaml (freeze your config; edit as needed before training) ---\n",
+    "# Save the frozen config for reproducibility\n",
     "CFG = {\n",
     "    \"seed\": 42,\n",
     "    \"epochs\": 5,\n",
     "    \"batch_size\": 128,\n",
     "    \"lr\": 1e-3,\n",
     "    \"dataset\": \"CIFAR10\",\n",
-    "    \"data_root\": f\"{DATA_DIR}/raw\",   # downloads land here\n",
+    "    \"data_root\": f\"{DATA_DIR}/raw\",\n",
     "    \"num_workers\": 2,\n",
     "    \"amp\": True,\n",
     "}\n",
     "with open(f\"{RUN_DIR}/cfg.yaml\", \"w\") as f:\n",
     "    yaml.safe_dump(CFG, f)\n",
     "\n",
-    "# --- Convenience symlinks to \"latest\" (optional) ---\n",
-    "def safe_symlink(src, dst):\n",
+    "# Convenience: point a \"latest\" folder to this run (copy if symlink fails)\n",
+    "def safe_point_latest(src, dst):\n",
     "    try:\n",
     "        if os.path.islink(dst) or os.path.exists(dst):\n",
-    "            os.remove(dst)\n",
+    "            if os.path.islink(dst):\n",
+    "                os.unlink(dst)\n",
+    "            else:\n",
+    "                shutil.rmtree(dst)\n",
     "        os.symlink(src, dst)\n",
     "    except Exception:\n",
-    "        # on Drive/Windows symlink may fail → just copy\n",
-    "        if os.path.isdir(src):\n",
-    "            if os.path.exists(dst): shutil.rmtree(dst)\n",
-    "            shutil.copytree(src, dst)\n",
-    "        else:\n",
-    "            shutil.copy2(src, dst)\n",
+    "        shutil.copytree(src, dst)\n",
     "\n",
-    "safe_symlink(RUN_DIR, f\"{PROJECT}/outputs\")                 # latest outputs → runs/<id>\n",
-    "safe_symlink(f\"{RUN_DIR}/checkpoints\", f\"{PROJECT}/checkpoints\")\n",
-    "print(\"RUN_DIR:\", RUN_DIR)"
+    "safe_point_latest(RUN_DIR, f\"{LATEST_DIR}/run\")\n",
+    "print(\"🏷️ RUN_ID:\", RUN_ID)\n",
+    "print(\"📁 RUN_DIR:\", RUN_DIR)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4bcb832",
+   "id": "4be8cbe4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Long-form metrics CSV: split, epoch, metric, value\n",
     "METRICS_CSV = f\"{RUN_DIR}/metrics.csv\"\n",
     "\n",
     "def log_metrics(rows):\n",
     "    \"\"\"\n",
     "    rows: list of dicts with keys: split, epoch, metric, value\n",
-    "    example:\n",
-    "      log_metrics([\n",
-    "        {\"split\":\"train\",\"epoch\":1,\"metric\":\"loss\",\"value\":1.234},\n",
-    "        {\"split\":\"val\",\"epoch\":1,\"metric\":\"acc\",\"value\":0.78},\n",
-    "      ])\n",
     "    \"\"\"\n",
-    "    import pandas as _pd, os as _os\n",
-    "    df = _pd.DataFrame(rows, columns=[\"split\",\"epoch\",\"metric\",\"value\"])\n",
-    "    df.to_csv(METRICS_CSV, mode=\"a\", header=not _os.path.exists(METRICS_CSV), index=False)"
+    "    df = pd.DataFrame(rows, columns=[\"split\",\"epoch\",\"metric\",\"value\"])\n",
+    "    df.to_csv(METRICS_CSV, mode=\"a\", header=not os.path.exists(METRICS_CSV), index=False)"
    ]
   },
   {
@@ -152,20 +166,6 @@
     "    subprocess.run(['git', 'clone', REPO_URL, REPO_PATH], check=True)\n",
     "\n",
     "print(f\"Repository ready at {REPO_PATH}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "725e72bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mount Google Drive (optional but recommended)\n",
-    "from google.colab import drive\n",
-    "\n",
-    "drive.mount('/content/drive')\n",
-    "print(\"Google Drive mounted at /content/drive\")"
    ]
   },
   {
@@ -222,22 +222,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Configuration\n",
-    "CFG = {\n",
-    "    \"seed\": 42,\n",
-    "    \"epochs\": 5,\n",
-    "    \"batch_size\": 128,\n",
-    "    \"lr\": 1e-3,\n",
-    "    \"num_workers\": 2,\n",
-    "    \"dataset\": \"CIFAR10\",\n",
-    "    \"data_root\": \"/content/data\",\n",
-    "    \"save_to_drive\": True,\n",
-    "    \"drive_dir\": \"/content/drive/MyDrive/ml-outputs\",\n",
-    "}\n",
-    "\n",
-    "print(\"Config:\")\n",
+    "# Display current configuration (already saved to cfg.yaml)\n",
+    "print(\"Current Configuration:\")\n",
+    "print(\"=\" * 50)\n",
     "for key, val in CFG.items():\n",
-    "    print(f\"  {key}: {val}\")"
+    "    print(f\"  {key:20s}: {val}\")\n",
+    "print(\"=\" * 50)\n",
+    "print(f\"\\n✅ Config saved to: {RUN_DIR}/cfg.yaml\")"
    ]
   },
   {
@@ -381,28 +372,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copy entire run to Google Drive (if enabled)\n",
-    "if SAVE_TO_DRIVE:\n",
-    "    import subprocess, shlex\n",
-    "    \n",
-    "    dst = f\"{DRIVE_DIR}/runs/{RUN_ID}\"\n",
-    "    os.makedirs(os.path.dirname(dst), exist_ok=True)\n",
-    "    \n",
-    "    # Use cp -r to copy entire run directory\n",
-    "    result = subprocess.run(\n",
-    "        shlex.split(f'cp -r \"{RUN_DIR}\" \"{dst}\"'),\n",
-    "        capture_output=True,\n",
-    "        text=True,\n",
-    "        check=False\n",
-    "    )\n",
-    "    \n",
-    "    if result.returncode == 0:\n",
-    "        print(f\"✅ Copied run to Drive: {dst}\")\n",
-    "    else:\n",
-    "        print(f\"⚠️  Copy to Drive failed: {result.stderr}\")\n",
-    "else:\n",
-    "    print(f\"📁 Run saved locally: {RUN_DIR}\")\n",
-    "    print(f\"   (Set SAVE_TO_DRIVE=True to copy to Google Drive)\")"
+    "# All artifacts are already on Google Drive!\n",
+    "print(\"✅ All artifacts saved to Google Drive:\")\n",
+    "print(f\"   {RUN_DIR}\")\n",
+    "print(f\"\\n📍 Access from any device:\")\n",
+    "print(f\"   Google Drive → MyDrive → {PROJECT_NAME} → runs → {RUN_ID}\")\n",
+    "print(f\"\\n\udca1 Latest run always available at:\")\n",
+    "print(f\"   {LATEST_DIR}/run\")"
    ]
   },
   {
