--- a/notebooks/01_train.ipynb
+++ b/notebooks/01_train.ipynb
@@ -134,7 +134,11 @@
    "outputs": [],
    "source": [
     "# A5) (Optional) GPU info\n",
-    "!nvidia-smi"
+    "import subprocess\n",
+    "try:\n",
+    "    subprocess.run([\"nvidia-smi\"], check=True)\n",
+    "except Exception as e:\n",
+    "    print(\"nvidia-smi not available or not accessible:\", e)\n"
    ]
   },
   {
@@ -144,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Section B — Run Config (frozen to Drive)"
+    "## Section B — Run Config (frozen to Drive)\n"
    ]
   },
   {
@@ -216,7 +220,7 @@
     "    df = pd.DataFrame(rows, columns=[\"split\",\"epoch\",\"metric\",\"value\"])\n",
     "    df.to_csv(METRICS_CSV, mode=\"a\", header=not os.path.exists(METRICS_CSV), index=False)\n",
     "\n",
-    "print(\"✅ Metrics will be appended to:\", METRICS_CSV)"
+    "print(\"✅ Metrics will be appended to:\", METRICS_CSV)\n"
    ]
   },
   {
@@ -226,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Section C — Train (data & artifacts on Drive)"
+    "## Section C — Train (data & artifacts on Drive)\n"
    ]
   },
   {
@@ -237,7 +241,7 @@
     "# C0) Seed & device\n",
     "set_seed(CFG[\"seed\"])\n",
     "device = get_device()\n",
-    "print(f\"Device: {device} | CUDA available: {torch.cuda.is_available()}\")"
+    "print(f\"Device: {device} | CUDA available: {torch.cuda.is_available()}\")\n"
    ]
   },
   {
@@ -321,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Section D — Inspect (everything is already on Drive)"
+    "## Section D — Inspect (everything is already on Drive)\n"
    ]
   },
   {
@@ -342,7 +346,7 @@
     "\n",
     "print(\"\\n✅ All artifacts are in Google Drive:\")\n",
     "print(f\"   MyDrive → {PROJECT_NAME} → runs → {RUN_ID}\")\n",
-    "print(\"🔗 Latest run pointer:\", f\"{LATEST_DIR}/run\")"
+    "print(\"🔗 Latest run pointer:\", f\"{LATEST_DIR}/run\")\n"
    ]
   },
   {
