--- a/notebooks/01_train.ipynb
+++ b/notebooks/01_train.ipynb
@@ -132,12 +132,34 @@
         "\n",
         "from src.utils import (\n",
         "    set_seed, get_device, prepare_dataloaders_cifar10, SimpleNet,\n",
-        "    train_one_epoch, evaluate, save_checkpoint, append_metrics_csv\n",
+        "    train_one_epoch, evaluate, save_checkpoint\n",
         ")\n",
         "import torch, torch.optim as optim\n",
         "from tqdm import tqdm\n",
         "\n",
         "print(\"✅ Imports OK | torch:\", torch.__version__)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ae09329a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# A4b) Robustness add-ons for reproducibility and efficiency\n",
+        "from IPython.display import display  # used in Section D\n",
+        "\n",
+        "# Cache models/datasets in Drive to avoid re-downloads across sessions\n",
+        "os.environ.setdefault(\"TORCH_HOME\", f\"{DATA_DIR}/cache/torch\")\n",
+        "os.environ.setdefault(\"HF_HOME\", f\"{DATA_DIR}/cache/hf\")\n",
+        "pathlib.Path(os.environ[\"TORCH_HOME\"]).mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "# CuDNN determinism for reproducibility\n",
+        "torch.backends.cudnn.benchmark = False\n",
+        "torch.backends.cudnn.deterministic = True\n",
+        "\n",
+        "print(\"✅ Cache paths set | CuDNN deterministic mode enabled\")"
       ]
     },
     {
@@ -407,11 +429,11 @@
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
     "colab": {
       "provenance": []
+    },
+    "language_info": {
+      "name": "python"
     }
   },
   "nbformat": 4,
